yaml/Day3/02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  containers:
  - name: helloapp
    image: poznajkubernetes/helloapp:svc
    resources: {}
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
  - name: tools
    image: giantswarm/tiny-tools
    resources: {}
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: tools
  labels:
    app: tools
spec:
  containers:
  - name: tools
    image: giantswarm/tiny-tools
    resources: {}
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: tools
  namespace: demo
  labels:
    app: tools
spec:
  containers:
  - name: tools
    image: giantswarm/tiny-tools
    resources: {}
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
