yaml/Day3/03-svc-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        resources: {}
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 5
          initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kuard
