yaml/Day3/06-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - name: helloapp
        image: poznajkubernetes/helloapp:svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: helloapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapp
  #annotations:
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: helloapp.pwc.patoarchitekci.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloapp
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
spec:
  selector:
    matchLabels:
      app: echo-v1
  template:
    metadata:
      labels:
        app: echo-v1
    spec:
      containers:
      - name: echo-v1
        image: gcr.io/google_containers/echoserver:1.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
spec:
  selector:
    app: echo-v1
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  selector:
    matchLabels:
      app: echo-v2
  template:
    metadata:
      labels:
        app: echo-v2
    spec:
      containers:
      - name: echo-v2
        image: gcr.io/google_containers/echoserver:1.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
spec:
  selector:
    app: echo-v2
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: helloapp.pwc.patoarchitekci.io
    http:
      paths:
      - path: /echo-v1/(.*)
        pathType: Prefix
        backend:
          service:
            name: echo-v1
            port:
              number: 8080
  - host: helloapp.pwc.patoarchitekci.io
    http:
      paths:
      - path: /echo-v2/(.*)
        pathType: Prefix
        backend:
          service:
            name: echo-v2
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapp
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
spec:
  rules:
  - host: helloapp.pwc-appgw.patoarchitekci.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloapp
            port:
              number: 8080
